# protobuf-demo

./: CMakeLists.txt  guide_how_to_gen_cpp_code.txt  guide_install_protobuf.txt  guide_usage_protobuf.txt  main.cc  tutorial.info.pb.cc  tutorial.info.pb.h  tutorial.info.proto  tutorial.person.pb.cc  tutorial.person.pb.h  tutorial.person.proto
protobuf2/lib/: libprotobuf-lite.la  libprotobuf-lite.so.9.0.0  libprotobuf.la  libprotoc.la
protobuf2/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
